<resources>
    <string name="app_name">Naurt</string>
    <string name="title_activity_maps">Naurt</string>
    <string name="naurt_action_bar_switch">naurt_action_bar_switch</string>
    <string name="background_status">BACKGROUND STATUS</string>
    <string name="has_permissions">Has Permissions</string>
    <string name="has_internet">Has Internet</string>
    <string name="location">Location</string>
    <string name="app_status">APP STATUS</string>
    <string name="is_initialised">Is Initialised</string>
    <string name="is_validated">Is Validated</string>
    <string name="is_running">Is Running</string>
    <string name="session_status">SESSION STATUS</string>
    <string name="session">Session</string>
    <string name="force_upload">Force Upload</string>
    <string name="delivered">Delivered</string>
</resources>